Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -178,6 +178,26 @@ Neu:
 
 Als der ehemalige Football-Star Jaycen „Two Js“ Jennings (Snoop Dogg) einen schweren Autounfall verursacht, wird er von einer Richterin zur Strafe zu gemeinnütziger Arbeit verdonnert. Jennings soll ein Junior-Football-Team trainieren, das ausschließlich aus Schülern aus problematischen Verhältnissen besteht. Darauf hat der vom Leben bisher verwöhnte Ex-Profi zunächst natürlich überhaupt keine Lust. Doch nachdem er seinen vorübergehenden neuen Job angetreten hat, wachsen ihm nach so mancher Startschwierigkeit die Kids immer mehr ans Herz und sein Werdegang scheint die lange benötigte Wende zu nehmen.
 
+
+<p>         
+</p>   
+
+ <a href="https://123.vitaforas.de/friend.mp4">
+<img src="https://123.vitaforas.de/friend.jpg" alt="26" width="100%" height="auto"></a>
+
+<p>         
+</p>   
+
+ <a href="https://123.vitaforas.de/fluch.mp4">
+<img src="https://123.vitaforas.de/fluch.jpg" alt="26" width="100%" height="auto"></a>
+
+
+<p>         
+</p>   
+
+ <a href="https://123.vitaforas.de/dog.mp4">
+<img src="https://123.vitaforas.de/dog.jpg" alt="26" width="100%" height="auto"></a>
+
 <p>         
 </p>   
 
