Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -185,12 +185,14 @@ Als der ehemalige Football-Star Jaycen „Two Js“ Jennings (Snoop Dogg) einen 
  <a href="https://123.vitaforas.de/friend.mp4">
 <img src="https://123.vitaforas.de/friend.jpg" alt="26" width="100%" height="auto"></a>
 
+Als der behütete und unsoziale Oliver (Max Harwood) nach dem plötzlichen und erschütternden Tod seiner Mutter neue Freunde finden soll, beschließt er, dass es das Beste wäre, ein paar von ihnen auszugraben (wortwörtlich). Als er jedoch am Morgen nach seinen Ausgrabungs-Eskapaden aufwacht, stellt er fest, dass seine neugewonnenen Freunde über Nacht auf mysteriöse Weise zum Leben erwacht sind, was sie alle in eine Reihe von Missgeschicken stürzt, während sie versuchen, ihr Geheimnis vor Nachbarn, Klassenkameraden und Sozialarbeitern gleichermaßen zu wahren.
 <p>         
 </p>   
 
  <a href="https://123.vitaforas.de/fluch.mp4">
 <img src="https://123.vitaforas.de/fluch.jpg" alt="26" width="100%" height="auto"></a>
 
+Anna (Belén Cuesta) ist schwanger und hat nur noch wenige Monate bis zur Niederkunft. Schon deshalb hat sie beschlossen, dass der diesjährige Urlaub mit ihrem Mann Marc (Jorge Suquet) ein wenig anders, weniger turbulent und aufregend als gewöhnlich, verlaufen soll. Daraus entsteht die Idee, mit Hans (Rainer Reiners) und Olga (Hildegard Schroedter), einem Rentnerpärchen aus der deutschen Provinz, das sie im Internet kennengelernt haben, für ein paar Wochen die Häuser zu tauschen. Zunächst ist auch alles wunderbar und Anna und Marc genießen die lauschige Abgeschiedenheit ihres Feriendomizils in der Fremde. Doch nach und nach mutiert der Trip zu einem echten Albtraum für das Paar. Muss es doch entdecken, dass Hans und Olga offenbar gar nicht im Gegenzug nach Spanien gereist sind, sondern ganz andere Pläne haben – und zwar mit ihnen …
 
 <p>         
 </p>   
@@ -198,6 +200,7 @@ Als der ehemalige Football-Star Jaycen „Two Js“ Jennings (Snoop Dogg) einen 
  <a href="https://123.vitaforas.de/dog.mp4">
 <img src="https://123.vitaforas.de/dog.jpg" alt="26" width="100%" height="auto"></a>
 
+Als Kind wird der in sich gekehrte Doug (Lincoln Powell) immer wieder von seinem brutalen Vater (Clemens Schick) und seinem großen Bruder (Adam Speers) übelst misshandelt. Schließlich sperrt der tyrannische Alte den Jungen sogar zu seinen extrem aggressiven, weil bewusst unterernährten Kampfhunden in einen riesigen Zwinger. Anstatt den Jungen in Stücke zu reißen, werden die Vierbeiner allerdings zu seinen Freunden, helfen ihm zu überleben und schließlich sogar zu entkommen. Noch immer von den Misshandlungen gezeichnet, versucht der mittlerweile erwachsene, meist im Rollstuhl sitzende Doug (jetzt: Caleb Landry Jones), sich ein eigenes Leben aufzubauen. Dabei beschränkt er menschliche Kontakte auf das absolute Minimum. Ganz allein führt er ein Heim für ausgesetzte Hunde. Um dieses unterhalten zu können, betätigen sich der Mann und seine hochintelligenten, von ihm bestens ausgebildeten Schützlinge als Juwelendiebe …
 <p>         
 </p>   
 
