--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Klick Hier
 </p>   
 
  <a href="https://123.vitaforas.de/friend.mp4">
-<img src="https://123.vitaforas.de/friend.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/dying.png" alt="26" width="100%" height="auto"></a>
 
 Als der behütete und unsoziale Oliver (Max Harwood) nach dem plötzlichen und erschütternden Tod seiner Mutter neue Freunde finden soll, beschließt er, dass es das Beste wäre, ein paar von ihnen auszugraben (wortwörtlich). Als er jedoch am Morgen nach seinen Ausgrabungs-Eskapaden aufwacht, stellt er fest, dass seine neugewonnenen Freunde über Nacht auf mysteriöse Weise zum Leben erwacht sind, was sie alle in eine Reihe von Missgeschicken stürzt, während sie versuchen, ihr Geheimnis vor Nachbarn, Klassenkameraden und Sozialarbeitern gleichermaßen zu wahren.
 
