Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@ video.play();
 </p>
 
 <a href="http://123.vitaforas.de/hase.mp4">
-<img src="http://123.vitaforas.de/hase.jpg" alt="13" width="100%" height="auto"></a>
+<img src="http://123.vitaforas.de/rabbit1.jpg" alt="13" width="100%" height="auto"></a>
 
 Der siebenjährige William (Phoenix Laroche) bekommt zu Weihnachten ein neues Spielzeug geschenkt, einen kleinen Kuschelhasen. Nach kleineren Startschwierigkeiten wird das Plüschtier bald zu seinem Lieblingsspielgefährten, das ein Eigenleben entwickelt und dem Jungen eine faszinierende Welt voller Magie und Abenteuer eröffnet. Bei allem Spaß, den die beiden miteinander haben, wünscht das Häschen sich jedoch vor allem, ein echtes Tier zu sein.
 
