Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1593,6 +1593,16 @@ Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wi
 
 Nachdem er als Jigsaw schon mehrere Menschen mittels grausamer Folterfallen vermeintlich dazu gebracht hat, ihr Leben wieder wertzuschätzen, hat John Kramer (Tobin Bell) wegen seiner schweren Krebserkrankung selbst nur noch wenige Monate zu leben. Doch schöpft er neue Hoffnung, als er von einer experimentellen Wunderbehandlung mit großen Erfolgschancen hört. Er macht sich auf den Weg nach Mexiko, um dort in einer Untergrundklinik den entsprechenden Eingriff durchführen zu lassen – fällt allerdings einem perfiden Betrug zum Opfer. Die Betreiber der Klinik machen verzweifelten Menschen falsche Versprechungen, um ihnen so das Geld aus der Tasche zu ziehen. Doch haben sie die Rechnung ohne Jigsaw gemacht! Kramer will die Betrüger zur Rechenschaft ziehen und denkt sich einmal mehr sadistische Todesapparaturen aus, mit denen die Scharlatane gequält werden sollen...
 
+
+ <p>         
+</p>        
+
+ <a href="https://123.vitaforas.de/dark.mp4">
+<img src="https://123.vitaforas.de/dark.jpg" alt="15" width="100%" height="auto"></a>
+
+Halloween 1963: Jeder Bewohner einer kleinen Stadt im Mittleren Westen der USA weiß, wer October Boy alias Ol'Hacksaw Face alias Sawtooth Jack (Dustin Ceithamer) ist. Egal, unter welchem Namen man ihn auch kennt, er erhebt sich jedes Halloween mit einem Fleischermesser in der Hand von den Getreidefeldern und macht sich auf den Weg in die Stadt, in der Teenager-Banden gespannt auf ihre Chance warten, sich dem legendären Alptraum zu stellen. Sowohl Jäger als auch Gejagter: Der October Boy ist der Preis für den jährlichen Ritus von Leben und Tod. Richie Shepard (Casey Likes) und die rastlose Träumerin Kelly Haines (Emyri Crutchfield) wissen, dass das Töten des October Boy ihre einzige Chance ist, der Aussichtslosigkeit dieser Stadt zu entkommen. Sie sind bereit, alles zu riskieren, einschließlich ihres Lebens, um endlich als Gewinner zu brillieren. Doch bevor die Nacht vorbei ist, wird Pete das schreckliche Geheimnis des October Boy entdecken.
+
+Basiert auf Norman Patridges gleichnamigen Roman.
  <p>         
 </p>        
 
