Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -169,6 +169,23 @@ Der Anblick eines Massengrabes im Oderbruch versetzt die gesamte Region in Schoc
 <img src="https://123.vitaforas.de/haus.jpg" alt="26" width="100%" height="auto"></a>
 
 Um den größten Raubüberfall in der Geschichte durchzuziehen, rekrutiert ein mysteriöser Mann, der nur Professor genannt wird, eine Bande von acht Räubern, die eine einzige Eigenschaft teilen: Keiner von ihnen hat etwas zu verlieren. Fünf Monate in absoluter Abgeschiedenheit, in der sie jeden einzelnen Schritt durchgingen, jedes Detail, jede Wahrscheinlichkeit, gipfeln in elf Tagen in der Nationalen Münz- und Briefmarkenfabrik Spaniens. Sie sind umgeben von Hundertschaften bewaffneter Polizeikräfte und halten Dutzende von Geiseln in ihrer Macht, und jetzt heißt es herauszufinden, ob sie Selbstmord begangen haben oder ob ihr Plan aufgehen wird.
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/dark.mp4">
+<img src="https://123.vitaforas.de/dark.jpg" alt="26" width="100%" height="auto"></a>
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/headspace.mp4">
+<img src="https://123.vitaforas.de/headspace.jpg" alt="26" width="100%" height="auto"></a>
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/killmode.mp4">
+<img src="https://123.vitaforas.de/killmode.jpg" alt="26" width="100%" height="auto"></a>
+
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/monk.mp4">
