Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@ Um den größten Raubüberfall in der Geschichte durchzuziehen, rekrutiert ein m
 
 <p>         
 </p>   
+ <a href="https://123.vitaforas.de/sight.mp4">
+<img src="https://123.vitaforas.de/sight.jpg" alt="26" width="100%" height="auto"></a>
+
+Im Kalifornien der nahen Zukunft, in dem implantierte Kontaktlinsen den Alltag smart gemacht haben, leidet Patrick (Andrew Riddell) unter Platzangst und kann seine Wohnung kaum verlassen. Sein Leben nimmt eine unerwartete Wendung, als ihm die mysteriöse App "Refresh" für seine Linsen angeboten wird. Mit dieser App hat er die Möglichkeit, seine Ängste zu überwinden, ein normales Leben zu führen und sogar Dates zu haben. Allerdings wird schnell klar, dass die scheinbare Lösung für Patricks Probleme mit einem hohen Preis verbunden ist ...
+
+<p>         
+</p>   
  <a href="https://123.vitaforas.de/monk.mp4">
 <img src="https://123.vitaforas.de/monk.jpg" alt="26" width="100%" height="auto"></a>
 
