Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -174,18 +174,20 @@ Um den größten Raubüberfall in der Geschichte durchzuziehen, rekrutiert ein m
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/dark.mp4">
-<img src="https://123.vitaforas.de/dark.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/dark1.jpg" alt="26" width="100%" height="auto"></a>
+Halloween 1963: Jeder Bewohner einer kleinen Stadt im Mittleren Westen der USA weiß, wer October Boy alias Ol'Hacksaw Face alias Sawtooth Jack (Dustin Ceithamer) ist. Egal, unter welchem Namen man ihn auch kennt, er erhebt sich jedes Halloween mit einem Fleischermesser in der Hand von den Getreidefeldern und macht sich auf den Weg in die Stadt, in der Teenager-Banden gespannt auf ihre Chance warten, sich dem legendären Alptraum zu stellen. Sowohl Jäger als auch Gejagter: Der October Boy ist der Preis für den jährlichen Ritus von Leben und Tod. Richie Shepard (Casey Likes) und die rastlose Träumerin Kelly Haines (Emyri Crutchfield) wissen, dass das Töten des October Boy ihre einzige Chance ist, der Aussichtslosigkeit dieser Stadt zu entkommen. Sie sind bereit, alles zu riskieren, einschließlich ihres Lebens, um endlich als Gewinner zu brillieren. Doch bevor die Nacht vorbei ist, wird Pete das schreckliche Geheimnis des October Boy entdecken.
 
+Basiert auf Norman Patridges gleichnamigen Roman.
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/headspace.mp4">
 <img src="https://123.vitaforas.de/headspace.jpg" alt="26" width="100%" height="auto"></a>
-
+Gus (Stimme im englischsprachigen Original: James Cairns), Sophie (Jana Louw) und Max (Chris van Rensburg) jagen mit ihrem Raumschiff den bösen Zolthard (Zak Hendrikz) durch ein Wurmloch. Kurz darauf finden sich die drei winzigen Aliens plötzlich auf der Erde und im Kopf des 16-jährigen Norman (Bonko Khoza) wieder. Schockiert stellen sie fest, dass sie sehen und hören können, was er sieht beziehungsweise hört. Da sie wissen, dass Zolthard nun auch hier sein muss, wollen die Verbrechensbekämpfer von der Space Protection Force Norman benutzen, um den Planeten vor dem ebenso mikroskopisch kleinen, intergalaktischen Bösewicht zu retten. Dem ist es allerdings gelungen, die Kontrolle über Körper und Geist von Normans Schuldirektorin Mrs. Witherington zu übernehmen. Es dauert nicht lange und es kommt vor den Augen der staunenden Schüler zu einem gewaltigen Showdown …
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/killmode.mp4">
 <img src="https://123.vitaforas.de/killmode.jpg" alt="26" width="100%" height="auto"></a>
-
+Es ist das Jahr 2027, acht Jahre nach dem ersten Ausbruch von „The Sickness“, einem hoch ansteckenden, anpassungsfähigen und tödlichen Virus. Die Welt wird jetzt von einem Pharmaunternehmen namens „The Company“ geführt, das eine Behandlung für das Virus anbietet, dafür jedoch einen hohen Preis verlangt, wodurch die Mehrheit der Menschen in einen Zustand der Armut und Abhängigkeit versetzt wird. David Oscar (Dave Mantel) ist es leid zu kämpfen. Er hat alle Hoffnung verloren und versteckt sich in einer kleinen illegalen Klinik. David ist ein ehemaliges Mitglied von The Flux“, einer Rebellenbewegung, die in den Medien als terroristische Organisation dargestellt wird. The Flux glaubt, dass das Unternehmen selbst für The Sickness verantwortlich ist. Nach Jahren des Versteckens vor seiner Vergangenheit wird David von Mitgliedern von The Flux gefunden, die ihn überreden, an einer wichtigen Mission teilzunehmen, von der sie glauben, dass sie zu einer Heilung von The Sickness führen wird. Als sie in die hochsichere Einrichtung von The Company einbrechen, entdecken sie kein Heilmittel für The Sickness, sondern ein junges Mädchen namens Molly (Julia Batelaan)...
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/sight.mp4">
