Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -297,6 +297,13 @@ Wer kennt nicht das Höhlengleichnis nach Platon, in dem die Menschen in einer H
 
 <p>         
 </p>   
+  <a href="https://123.vitaforas.de/escape.mp4">
+<img src="https://123.vitaforas.de/escape.jpg" alt="26" width="100%" height="auto"></a>
+
+Nach einem traumatischen Vorfall in ihrer Heimat Großbritannien sind die besten Freundinnen Lana (Abigail Lawrie) und Kitty (Rhianne Barreto) auf der Flucht vor dem Gesetz. Inzwischen hat es sie nach Thailand verschlagen, wo sie verschwitzte Partynächte dazu nutzen, den Schmerz und die Schuld zu betäuben. Dann jedoch werden sie von den Schatten ihrer Vergangenheit eingeholt, weswegen sie erneut gezwungen sind, weiterzuziehen. Als sich ihnen die Chance bietet, Unterschlupf auf einer Yacht namens “Blue” zu erhalten, zögern sie nicht lange. Anfangs wirkt das Boot mitsamt seiner Crew aus wunderschönen Menschen wie ein Paradis und die beiden Freundinnen beginnen damit, sich dem einzigartigen Zauber der Kulisse hinzugeben. Doch geht es hier wirklich mit rechten Dingen zu? Schon bald beginnt die perfekte Fassade zu bröckeln, woraufhin sich immer mehr Probleme offenbaren. Hass, Gier und Lust brauen sich zu einem gefährlichen Cocktail zusammen, der die beiden Flüchtigen in die Tiefe zu ziehen droht. Als ein Todesfall in ihrer Mitte stattfindet, steht eins fest: Auf der Yacht scheint niemand sicher zu sein …
+
+<p>         
+</p>   
   <a href="https://123.vitaforas.de/creator.mp4">
 <img src="https://123.vitaforas.de/creator.jpg" alt="26" width="100%" height="auto"></a>
 
