Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@ Klick Hier
         <p>         
 </p>         
 
+ <a href="https://123.vitaforas.de/bob.mp4">
+<img src="https://123.vitaforas.de/bob.jpg" alt="26" width="100%" height="auto"></a>
 
+1976: Auf Jamaika herrschen bürgerkriegsähnliche Zustände. Um für Frieden und Verständigung unter seinen Landsleuten zu werben, kündigt Bob Marley (Kingsley Ben-Adir) ein großes Gratis-Konzert in der Hauptstadt Kingston an. Kurz vor dem Termin dringen jedoch bewaffnete Männer in das Haus ein, in dem der Reggae-Star mit seiner Frau Rita (Lashana Lynch), den gemeinsamen Kindern sowie einigen Freunden und Begleitmusikern lebt. Ohne zu zögern, schießen die Kerle wild um sich. Es gibt zwar mehrere Schwerverletzte, aber zum Glück keine Toten. Um seine Familie und seine Band in Sicherheit zu bringen, stimmt Marley zu, mit ihnen übergangsweise nach London umzuziehen. Dort nimmt er „Exodus“ auf, sein musikalisch als auch in Bezug auf seine Message wichtigstes Album, mit dem er endgültig zum globalen Superstar aufsteigt. Die unverändert heikle Situation in seiner Heimat lässt ihn aber ebenso wenig zur Ruhe kommen wie eine sich zunächst noch subtil, bald immer hartnäckiger ankündigende Erkrankung …
 <p>         
 </p>   
 
@@ -127,6 +130,12 @@ __________
  <p>
 </p>     
 
+
+ <a href="https://123.vitaforas.de/tötemich.mp4">
+<img src="https://123.vitaforas.de/tötemich.jpg" alt="26" width="100%" height="auto"></a>
+Endlich hat Piotr (Mateusz Banasiuk) seiner Natalia (Weronika Ksiazkiewicz) einen Antrag gemacht und wenig später haben die beiden auch schon geheiratet. Das Glück scheint den beiden weiter hold zu sein, als die Nachricht über einen üppigen Lotteriegewinn ins Haus flattert: Zusammen haben sie fünf Millionen Euro gewonnen! Doch was eigentlich ein Grund sein sollte, sich gemeinsam zu freuen, verkehrt sich bald ins Gegenteil: Anstatt Pläne zu schmieden, was man gemeinsam Schönes mit dem Gewinn anstellen könnte, kommen Piotrs und Natalias übelste Seiten zum Vorschein und beide versuchen, den jeweils anderen umzubringen – im Badezimmer, im Auto, beim Klettern, in der Sauna oder beim Abendessen.
+ <p>
+</p>     
 
 <a href="https://123.vitaforas.de/swim.mp4">
 <img src="https://123.vitaforas.de/swim.jpg" alt="1" width="100%" height="auto"></a>
