Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                                                         <div class="inner">
                                                                 <h1>StreamTV</h1>
 
+
+<img src="StreamTV.png" alt="" width="100%" height="auto">
+
 Kein Login, keine Werbung, just Watch !
  <p>
 </p>
