Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
                                                                 <h1>StreamTV</h1>
 
 
-<img src="StreamTV.png" alt="" width="100%" height="auto">
-
 Kein Login, keine Werbung, just Watch !
  <p>
+
+<img src="StreamTV.png" alt="300" width="85%" height="auto">
+
 </p>
 __________________☁️
 <p>         
