Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1794,12 +1794,12 @@ Ash (Bruce Campbell) und Linda (Denise Bixler) ziehen sich für ein paar schöne
 
                                                 <!-- Contact -->
                                                         <article id="contact">
-                                                                <h2 class="major">Sammlungen</h2>
-                                                                <form method="post" action="#">
+                                                                <h2 class="major"> </h2>
+<img src="StreamTV.png" alt="300" width="85%" height="auto">                                                                <form method="post" action="#">
                                                                         <div class="fields">
                                                                                 <div class="field half">
 
-
+Sammlungen:
 <p>
 </p> 
 
