Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1877,8 +1877,8 @@ Joko & Klaas:
 <img src="https://123.vitaforas.de/insel.jpg" alt="62" width="50" height="60"></a>
      <a href="https://123.vitaforas.de/zoo.mp4">
 <img src="https://123.vitaforas.de/zoo.jpg" alt="41" width="50" height="60"></a>
-     <a href="https://123.vitaforas.de/fluch.mp4">
-<img src="https://123.vitaforas.de/fluch.jpg" alt="95" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/Fluchh.mp4">
+<img src="https://123.vitaforas.de/Fluchh.jpg" alt="95" width="50" height="60"></a>
      <a href="https://123.vitaforas.de/kfz.mp4">
 <img src="https://123.vitaforas.de/kfz.jpg" alt="104" width="50" height="60"></a>
      <a href="https://123.vitaforas.de/koch.mp4">
