Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Klick Hier
                                                         <article id="intro">
                                                                 <h2 class="major">[[WATCH FREE]] @</h2>
                                                                 <span class="image main"><img src="https://123.vitaforas.de/1.jpg" alt="" /></span>
-
+Just NEW 👇🏼
         <p>         
 </p>         
 
