Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@ Klick Hier
                                                                 <h2 class="major">[[WATCH FREE]] @</h2>
                                                                 <span class="image main"><img src="https://123.vitaforas.de/1.jpg" alt="" /></span>
 Just NEW 👇🏼
+
+        <p>         
+</p>         
+
+ <a href="https://123.vitaforas.de/panda4.mp4">
+<img src="https://123.vitaforas.de/p4.jpg" alt="26" width="100%" height="auto"></a>
+
+Po (Stimme im Original: Jack Black; in der dt. Synchronfassung: Hape Kerkeling) wird von Meister Shifu (Dustin Hoffman) dazu angehalten, jemanden auszuerwählen, der ihm als Drachenkrieger nachfolgen soll. Er selbst soll nun den nächsten Schritt in seiner Reise antreten und in den Rang eines spirituellen Führers aufsteigen. Doch Po hat noch keine Lust, sein Drachenkrieger-Dasein an den Nagel zu hängen - schließlich fühlt er sich in dieser Rolle sehr wohl. Als Kunde von einem schrecklichen Bösewicht in das Tal des Friedens dringt, der in der Lage ist, seine Gestalt zu verändern und so Pos größte Feinde imitiert, ist für ihn klar, dass er noch einmal zu einer letzten Mission aufbrechen muss. An seiner Seite: Die listige Füchsin Zhen (Awkwafina), die er zuvor bei einem Raubzug überrascht hat. Im Gegenzug für Hafterlass verrät diese nicht nur, dass hinter den schurkischen Tricksereien das Chamäleon (Viola Davis) steckt, sondern ist auch noch bereit, Po zu ihr zu führen. Ihr gemeinsamer Weg führt sie in eine Großstadt, wo der Kung-Fu-Panda schon bald mit dem Gesetz in Konflikt gerät. Doch die eigentliche Herausforderung liegt ja erst noch vor ihm. Kann Po gegen die Verwandlungsfähigkeiten des Chamäleons ankommen?
         <p>         
 </p>         
 
