--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,7 @@ video.play();
 </p>
 
 <a href="http://123.vitaforas.de/hase.mp4">
-<img src="http://123.vitaforas.de/rabbit1.jpg" alt="13" width="100%" height="auto"></a>
+<img src="rabbit1.jpg" alt="13" width="100%" height="auto"></a>
 
 Der siebenjährige William (Phoenix Laroche) bekommt zu Weihnachten ein neues Spielzeug geschenkt, einen kleinen Kuschelhasen. Nach kleineren Startschwierigkeiten wird das Plüschtier bald zu seinem Lieblingsspielgefährten, das ein Eigenleben entwickelt und dem Jungen eine faszinierende Welt voller Magie und Abenteuer eröffnet. Bei allem Spaß, den die beiden miteinander haben, wünscht das Häschen sich jedoch vor allem, ein echtes Tier zu sein.
 
@@ -1572,7 +1572,7 @@ YouTube Playlist 👇🏼
 </p>
         <p>
 <a href="http://123.vitaforas.de/stumm.mp4">
-<img src="http://123.vitaforas.de/silent-night.jpg" alt="4" width="100%" height="auto"></a>
+<img src="silent-night.jpg" alt="4" width="100%" height="auto"></a>
 
 Brian Godlock (Joel Kinnaman) muss mit ansehen, wie sein kleiner Sohn an Heiligabend in das Kreuzfeuer einer Gang gerät und stirbt. Dabei wird er selbst schwer verletzt und seiner Stimme beraubt. Rache wird nun zu seiner einzigen Mission und er beginnt dafür ein hartes Training. Godlock ist bereit, alles zu riskieren, um den Tod seines Sohnes zu vergelten
 
