Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ Als der behütete und unsoziale Oliver (Max Harwood) nach dem plötzlichen und e
 
 Jetzt Streamen [[Beekeeper]] / Watch NOW! :
 
-<a href="https://123.vitaforas.de/BEE.mp4">
-<img src="https://123.vitaforas.de/bee.jpg" alt="1" width="100%" height="auto"></a>
+<a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/BEE.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/bee.jpg" alt="1" width="100%" height="auto"></a>
  
  Beekeeper (2024 ‧ Action/Thriller)
 
