Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@ Klick Hier
                                                 <!-- Intro -->
                                                         <article id="intro">
                                                                 <h2 class="major">[[WATCH FREE]] @</h2>
-                                                                <span class="image main"><img src="https://123.vitaforas.de/1.jpg" alt="" /></span>
+                                                                <span class="image main"><img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/1.jpg" alt="" /></span>
 Just NEW 👇🏼
 
         <p>         
 </p>         
 
- <a href="https://123.vitaforas.de/panda4.mp4">
+ <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/panda4.mp4">
 <img src="p4.jpg" alt="26" width="100%" height="auto"></a>
 
 Po (Stimme im Original: Jack Black; in der dt. Synchronfassung: Hape Kerkeling) wird von Meister Shifu (Dustin Hoffman) dazu angehalten, jemanden auszuerwählen, der ihm als Drachenkrieger nachfolgen soll. Er selbst soll nun den nächsten Schritt in seiner Reise antreten und in den Rang eines spirituellen Führers aufsteigen. Doch Po hat noch keine Lust, sein Drachenkrieger-Dasein an den Nagel zu hängen - schließlich fühlt er sich in dieser Rolle sehr wohl. Als Kunde von einem schrecklichen Bösewicht in das Tal des Friedens dringt, der in der Lage ist, seine Gestalt zu verändern und so Pos größte Feinde imitiert, ist für ihn klar, dass er noch einmal zu einer letzten Mission aufbrechen muss. An seiner Seite: Die listige Füchsin Zhen (Awkwafina), die er zuvor bei einem Raubzug überrascht hat. Im Gegenzug für Hafterlass verrät diese nicht nur, dass hinter den schurkischen Tricksereien das Chamäleon (Viola Davis) steckt, sondern ist auch noch bereit, Po zu ihr zu führen. Ihr gemeinsamer Weg führt sie in eine Großstadt, wo der Kung-Fu-Panda schon bald mit dem Gesetz in Konflikt gerät. Doch die eigentliche Herausforderung liegt ja erst noch vor ihm. Kann Po gegen die Verwandlungsfähigkeiten des Chamäleons ankommen?
         <p>         
 </p>         
 
- <a href="https://123.vitaforas.de/bob.mp4">
-<img src="https://123.vitaforas.de/bob.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/bob.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/bob.jpg" alt="26" width="100%" height="auto"></a>
 
 1976: Auf Jamaika herrschen bürgerkriegsähnliche Zustände. Um für Frieden und Verständigung unter seinen Landsleuten zu werben, kündigt Bob Marley (Kingsley Ben-Adir) ein großes Gratis-Konzert in der Hauptstadt Kingston an. Kurz vor dem Termin dringen jedoch bewaffnete Männer in das Haus ein, in dem der Reggae-Star mit seiner Frau Rita (Lashana Lynch), den gemeinsamen Kindern sowie einigen Freunden und Begleitmusikern lebt. Ohne zu zögern, schießen die Kerle wild um sich. Es gibt zwar mehrere Schwerverletzte, aber zum Glück keine Toten. Um seine Familie und seine Band in Sicherheit zu bringen, stimmt Marley zu, mit ihnen übergangsweise nach London umzuziehen. Dort nimmt er „Exodus“ auf, sein musikalisch als auch in Bezug auf seine Message wichtigstes Album, mit dem er endgültig zum globalen Superstar aufsteigt. Die unverändert heikle Situation in seiner Heimat lässt ihn aber ebenso wenig zur Ruhe kommen wie eine sich zunächst noch subtil, bald immer hartnäckiger ankündigende Erkrankung …
 <p>         
 </p>   
 
- <a href="https://123.vitaforas.de/friend.mp4">
-<img src="https://123.vitaforas.de/dying.png" alt="26" width="100%" height="auto"></a>
+ <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/friend.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/dying.png" alt="26" width="100%" height="auto"></a>
 
 Als der behütete und unsoziale Oliver (Max Harwood) nach dem plötzlichen und erschütternden Tod seiner Mutter neue Freunde finden soll, beschließt er, dass es das Beste wäre, ein paar von ihnen auszugraben (wortwörtlich). Als er jedoch am Morgen nach seinen Ausgrabungs-Eskapaden aufwacht, stellt er fest, dass seine neugewonnenen Freunde über Nacht auf mysteriöse Weise zum Leben erwacht sind, was sie alle in eine Reihe von Missgeschicken stürzt, während sie versuchen, ihr Geheimnis vor Nachbarn, Klassenkameraden und Sozialarbeitern gleichermaßen zu wahren.
 
@@ -117,10 +117,10 @@ Bester Browser 👇🏼 Alternativ 👇🏼
 </p>
 
 <a href="https://play.google.com/store/apps/details?id=org.mozilla.fenix">
-<img src="https://123.vitaforas.de/fenix.jpg" alt="2" width="45%" height="auto"></a>
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/fenix.jpg" alt="2" width="45%" height="auto"></a>
 
 <a href="https://play.google.com/store/apps/details?id=org.mozilla.klar">
-<img src="https://123.vitaforas.de/klar.jpg" alt="2" width="45%" height="auto"></a>
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/klar.jpg" alt="2" width="45%" height="auto"></a>
 <p>
 </p>
  Bei Problemen einfach Cache löschen & weiter geht's. [Funktioniert auch für iPhone]
@@ -128,14 +128,14 @@ Bester Browser 👇🏼 Alternativ 👇🏼
 <p>
 </p>
 <p>   Bessere Wahl:
-<a href="https://t.ly/-U5ed"> <img src="https://123.vitaforas.de/TVbanner.jpg" alt="2" width="100%" height="auto"></a>
+<a href="https://t.ly/-U5ed"> <img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/TVbanner.jpg" alt="2" width="100%" height="auto"></a>
 </p>  
 __________
 
 <p>         
 </p>   
- <a href="https://123.vitaforas.de/kamin.mp4">
-<img src="https://123.vitaforas.de/kamin.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/kamin.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/kamin.jpg" alt="26" width="100%" height="auto"></a>
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
 
@@ -143,8 +143,8 @@ __________
 </p>     
 
 
- <a href="https://123.vitaforas.de/tötemich.mp4">
-<img src="https://123.vitaforas.de/tötemich.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/tötemich.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/tötemich.jpg" alt="26" width="100%" height="auto"></a>
 Endlich hat Piotr (Mateusz Banasiuk) seiner Natalia (Weronika Ksiazkiewicz) einen Antrag gemacht und wenig später haben die beiden auch schon geheiratet. Das Glück scheint den beiden weiter hold zu sein, als die Nachricht über einen üppigen Lotteriegewinn ins Haus flattert: Zusammen haben sie fünf Millionen Euro gewonnen! Doch was eigentlich ein Grund sein sollte, sich gemeinsam zu freuen, verkehrt sich bald ins Gegenteil: Anstatt Pläne zu schmieden, was man gemeinsam Schönes mit dem Gewinn anstellen könnte, kommen Piotrs und Natalias übelste Seiten zum Vorschein und beide versuchen, den jeweils anderen umzubringen – im Badezimmer, im Auto, beim Klettern, in der Sauna oder beim Abendessen.
  <p>
 </p>     
