Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -149,27 +149,27 @@ Endlich hat Piotr (Mateusz Banasiuk) seiner Natalia (Weronika Ksiazkiewicz) eine
  <p>
 </p>     
 
-<a href="https://123.vitaforas.de/swim.mp4">
-<img src="https://123.vitaforas.de/swim.jpg" alt="1" width="100%" height="auto"></a>
+<a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/swim.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/swim.jpg" alt="1" width="100%" height="auto"></a>
  
 Ray Waller (Wyatt Russell) leidet an multipler Sklerose und muss zugunsten seiner Gesundheit seine Baseballkarriere an den Nagel hängen. Um diesen Schritt leichter für alle Beteiligten, inklusive seiner Familie zu machen, soll ein Tapetenwechsel her. Also suchen die Wallers nach einem neuen Haus. Die Entscheidung fällt auf ein Heim mit eigenem Pool im Hintergarten, denn in diesem – so die Hoffnung der Familie – kann Ray auch gleich sein Reha-Programm absolvieren und wieder auf die Beine kommen. Und auch die Kinder Izzy (Amélie Hoeferle) und Elliot (Gavin Warren) finden Gefallen am kühlen Nass. Doch nach einiger Zeit häufen sich die mysteriösen Vorkommnisse. Erst verschwindet die Familienkatze spurlos und dann machen sowohl Izzy als auch Elliot merkwürdige Erfahrungen im Pool. Zudem scheint sich Ray erstaunlich schnell von seiner Krankheit zu erholen, denn schlagartig ist er so fit wie noch nie zuvor in seinem Leben. Auch wenn seine Frau Eve (Kerry Condon) noch nichts davon weiß – Ray hat dem Profisport wohl doch noch nicht endgültig den Rücken gekehrt haben und will zurück zum Baseball. Doch das ist nicht das, was die Familienidylle bedroht. Denn im Pool lauert etwas Böses, das langsam von Ray Besitz ergreift...
 <p>         
 </p>   
- <a href="https://123.vitaforas.de/mortal.mp4">
-<img src="https://123.vitaforas.de/mortal.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/mortal.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/mortal.jpg" alt="26" width="100%" height="auto"></a>
 
 Vor Tausenden von Jahren verwüstete eine gewaltige Katastrophe die Erde, doch die Menschheit hat sich ihrer neuen Umgebung längst angepasst. Gigantische Metropolen auf Rädern erhoben sich aus den Trümmern der untergegangenen Zivilisation. Auf der Suche nach den letzten Ressourcen fahren sie über die verdörrte Steppe und verschlingen gnadenlos die kleineren Städte. Zu den großen Metropolen gehört auch London als einer der gewaltigsten rollenden Kolosse. In diesem unerbittlichen Kampf trifft der unscheinbare Tom Natsworthy in einer schicksalshaften Begegnung auf die gefährliche Flüchtige Hester Shaw – zwei Gegensätze prallen aufeinander, zwei Menschen, deren Wege einander nie hätten kreuzen sollen. Sie schmieden eine überraschende Allianz, die über den Fortgang der Menschheitsgeschichte bestimmen könnte.
 <p>         
 </p>   
- <a href="https://123.vitaforas.de/halo.mp4">
-<img src="https://123.vitaforas.de/halo.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/halo.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/halo.jpg" alt="26" width="100%" height="auto"></a>
 
 Wie geht es weiter für den Master Chief John-117 (Pablo Schreiber) und sein Team aus Elite Spartans? Angesichts der jüngsten Ereignisse haben sie nur ein Ziel: Sich der hereinbrechenden Gefahr des Convenants entgegenzustellen, um eine Invasion zu verhindern. Doch verfügen sie wirklich über die nötigen Mittel, um den übermächtig scheinenden Gegnern etwas entgegenzusetzen? Als John auf schockierende Weise herausfindet, dass das Convenant einen verheerenden Angriff auf die Menschen geplant haben könnte, will er alles daransetzen, diese Pläne zu durchkreuzen. Doch niemand will ihm so recht glauben, weswegen er auf sich allein gestellt versuchen muss, die Wahrheit ans Licht zu bringen. Kann John einen Weg finden, die Menschheit vor ihrem Ende zu bewahren, oder ist ihre Vernichtung bereits besiegelt?
 
 <p>         
 </p>   
- <a href="https://123.vitaforas.de/upgrade.mp4">
-<img src="https://123.vitaforas.de/upgrade.png" alt="26" width="100%" height="auto"></a>
+ <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/upgrade.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/upgrade.png" alt="26" width="100%" height="auto"></a>
 
 Upgrade(2018)
  Filme  Action  Horror  Science-Fiction  Thriller
@@ -178,8 +178,8 @@ In einer von technologischen Errungenschaften dominierten Welt der nahen Zukunft
  <p>
 </p>     
 
-<a href="https://123.vitaforas.de/oderbruch.mp4">
-<img src="https://123.vitaforas.de/oderbruch.jpg" alt="1" width="100%" height="auto"></a>
+<a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/oderbruch.mp4">
+<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/oderbruch.jpg" alt="1" width="100%" height="auto"></a>
  
 Der Anblick eines Massengrabes im Oderbruch versetzt die gesamte Region in Schock. Ein Serienmörder scheint sein Unwesen zu treiben und löst einen gewaltigen Polizeieinsatz aus. Das BKA entsendet Kommissar Roland Voit (Felix Kramer) zurück in seine Heimat, um dort mit dem polnischen Kripobeamten Stanislaw Zajak (Lucas Gregorowicz) zusammenzuarbeiten. Doch auch Maggie Kring (Karoline Schuch), eine ehemalige Kollegin und Voits Jugendliebe, wird in die Ermittlungen hineingezogen, als ihre Familie unter Verdacht gerät. Maggie hatte einst bei der Oderflut von 1997 unter tragischen Umständen ihren Bruder Kai verloren und ihre Heimatstadt Krewlow verlassen. Zögerlich kehrt die ehemalige Polizistin an den Ort ihrer Kindheit zurück, um die schockierenden Serienmorde zu untersuchen und die wahren Umstände von Kais Tod aufzudecken. Während ihrer Ermittlungen müssen Maggie und Voit tief in ihre eigene Vergangenheit eintauchen, um eine düstere Wahrheit ans Licht zu bringen, die jegliche Vorstellungskraft übersteigt.
 
