--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ Po (Stimme im Original: Jack Black; in der dt. Synchronfassung: Hape Kerkeling) 
         <p>         
 </p>         
 
- <a href="`&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;`/bob.mp4">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/bob.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bob.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bob.jpg" alt="26" width="100%" height="auto"></a>
 
 1976: Auf Jamaika herrschen bürgerkriegsähnliche Zustände. Um für Frieden und Verständigung unter seinen Landsleuten zu werben, kündigt Bob Marley (Kingsley Ben-Adir) ein großes Gratis-Konzert in der Hauptstadt Kingston an. Kurz vor dem Termin dringen jedoch bewaffnete Männer in das Haus ein, in dem der Reggae-Star mit seiner Frau Rita (Lashana Lynch), den gemeinsamen Kindern sowie einigen Freunden und Begleitmusikern lebt. Ohne zu zögern, schießen die Kerle wild um sich. Es gibt zwar mehrere Schwerverletzte, aber zum Glück keine Toten. Um seine Familie und seine Band in Sicherheit zu bringen, stimmt Marley zu, mit ihnen übergangsweise nach London umzuziehen. Dort nimmt er „Exodus“ auf, sein musikalisch als auch in Bezug auf seine Message wichtigstes Album, mit dem er endgültig zum globalen Superstar aufsteigt. Die unverändert heikle Situation in seiner Heimat lässt ihn aber ebenso wenig zur Ruhe kommen wie eine sich zunächst noch subtil, bald immer hartnäckiger ankündigende Erkrankung …
 <p>         
