Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Klick Hier
                                                 <!-- Intro -->
                                                         <article id="intro">
                                                                 <h2 class="major">[[WATCH FREE]] @</h2>
-                                                                <span class="image main"><img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/1.jpg" alt="" /></span>
+                                                                <span class="image main"><img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/1.jpg" alt="" /></span>
 Just NEW 👇🏼
 
         <p>         
@@ -83,8 +83,8 @@ Po (Stimme im Original: Jack Black; in der dt. Synchronfassung: Hape Kerkeling) 
 <p>         
 </p>   
 
- <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/friend.mp4">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/dying.png" alt="26" width="100%" height="auto"></a>
+ <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/friend.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/dying.png" alt="26" width="100%" height="auto"></a>
 
 Als der behütete und unsoziale Oliver (Max Harwood) nach dem plötzlichen und erschütternden Tod seiner Mutter neue Freunde finden soll, beschließt er, dass es das Beste wäre, ein paar von ihnen auszugraben (wortwörtlich). Als er jedoch am Morgen nach seinen Ausgrabungs-Eskapaden aufwacht, stellt er fest, dass seine neugewonnenen Freunde über Nacht auf mysteriöse Weise zum Leben erwacht sind, was sie alle in eine Reihe von Missgeschicken stürzt, während sie versuchen, ihr Geheimnis vor Nachbarn, Klassenkameraden und Sozialarbeitern gleichermaßen zu wahren.
 
@@ -95,8 +95,8 @@ Als der behütete und unsoziale Oliver (Max Harwood) nach dem plötzlichen und e
 
 Jetzt Streamen [[Beekeeper]] / Watch NOW! :
 
-<a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/BEE.mp4">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/bee.jpg" alt="1" width="100%" height="auto"></a>
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/BEE.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bee.jpg" alt="1" width="100%" height="auto"></a>
  
  Beekeeper (2024 ‧ Action/Thriller)
 
